--- a/Main.css
+++ b/Main.css
@@ -2,8 +2,6 @@ body {
     margin: 0;
     padding: 0;
     font-family: 'Roboto', sans-serif;
-    background-color: #90d9f7;
-
 }
 
 ul {
@@ -17,8 +15,11 @@ ul {
     margin-bottom: 1px;
 }
 
+#container-fluid:hover {
+    box-shadow: 0 0 2px 1px #000000;
+}
 
-/* just adding some styling to make the carousel more depressing */
+/* just adding some styling to the carousel */
 #carouselExampleIndicators {
     transform: translate(-50%, -50%);
     position: absolute;
@@ -28,15 +29,7 @@ ul {
     height: 70%;
 }
 
-h1 {
-    color: #ffffff;
-    text-align: center;
-    position: absolute;
-    top: 10%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    font-family: 'Courier New', Courier, monospace;
-}
+
 
 h5, p {
     color: white;
@@ -52,12 +45,24 @@ img:hover {
     box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5);
 }
 
+/*buttons*/
 .buttons {
     width: 300px;
     height: 300px;
     margin-top: 800px;
     font-size: x-large;
     margin-bottom: 50px;
+    object-fit: cover;
+    border-radius: 50px;
+    background-image: url(/cyprus.jpg);
+}
+
+.buttons #France {
+    background-image: url(/france.jpg);
+}
+
+.buttons #Cyprus {
+    background-image: url(/cyprus.jpg);
 }
 
 .button-container {
@@ -66,9 +71,13 @@ img:hover {
     justify-content: center;
     flex-wrap: wrap;
     justify-content: space-evenly;
-    border-radius: 50px;
 }
 
+.button-container:hover {
+    box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5);
+}
+
+/*search box*/
 .form {
     text-align: left;
 }
@@ -83,8 +92,9 @@ img:hover {
     padding: 0px;
 }
 
+/*about the footer*/ 
 footer {
-    
+    background-color: #65b0cd;
     border-top: solid 2px #000000;
     border-bottom: 100px;
     padding-bottom: 100px;
@@ -126,7 +136,7 @@ h3 {
     justify-content: space-between; /* Space the images evenly */
 }
 .image-container img { /* Set the width of each image to 50% of the container */
-    height:20%
+    height:20%;
     object-fit: cover;
     border-radius: 0%;
     margin: 10px;
