--- a/Main.css
+++ b/Main.css
@@ -30,8 +30,7 @@ ul {
 }
 
 
-
-h5, p {
+h5 {
     color: white;
     text-shadow: 2px 2px 4px #000000;
 }
@@ -140,4 +139,23 @@ h3 {
     object-fit: cover;
     border-radius: 0%;
     margin: 10px;
+}
+
+/*Cyprus carousel*/
+#carouselCyprusIndicators {
+    display: flex;
+    justify-content: center;
+    width: 30%;
+    height: 70%;
+}
+
+table {
+    text-align: center;
+    display: flex;
+    justify-content: center;
+}
+
+h1 {
+    text-align: center;
+    text-decoration: double;
 }
